--- a/homer/config.yml
+++ b/homer/config.yml
@@ -29,9 +29,9 @@ links:
 # Services
 # First level array represent a group.
 # Leave only a "items" key if not using group (group name, icon & tagstyle are optional, section separation will not be displayed).
-# services:
-#   - name: "Movies/TV"
-#     icon: "fas fa-film"
+services:
+  - name: "Movies/TV"
+    icon: "fas fa-film"
     items:
       - name: "Emby"
         logo: "assets/tools/jenkins.png"
