--- a/homer/config.yml
+++ b/homer/config.yml
@@ -3,7 +3,7 @@
 # See https://fontawesome.com/icons for icons options
 
 title: "Chaz's Server"
-subtitle: ""
+subtitle: "IDK, watch stuff"
 logo: "assets/logo.png"
 # icon: "fas fa-skull-crossbones" Optional icon
 footer: '<p>Created with <span class="has-text-danger">❤️</span> with <a href="https://bulma.io/">bulma</a>, <a href="https://vuejs.org/">vuejs</a> & <a href="https://fontawesome.com/">font awesome</a> // Fork me on <a href="https://github.com/bastienwirtz/homer"><i class="fab fa-github-alt"></i></a></p>'  # set false if you want to hide it.
